Fix playground editor stretching width

--- a/assets/css/playground.sass
+++ b/assets/css/playground.sass
@@ -4,10 +4,18 @@ playground-app
 	flex-flow: column nowrap
 
 	iframe, .cm-editor
+		max-width: 100%
 		min-height: calc(var(--sc-lh) * 10rem)
+		width: 100%
 
 	> form > fieldset > div
 		background: var(--sc-bg)
+		box-sizing: border-box
+		display: flex
+		flex-flow: row nowrap
+		max-width: 100%
+		min-width: 100%
+		width: 100%
 
 	form, menu, nav
 		margin: 0
